# poke

./: Makefile  Makefile.in  acconfig.h  array.c  config.h  config.in  config.status  configure  configure.ac  poke  poke.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
makefile_bk/: Makefile
